--- a/src/candidate/candidate.css
+++ b/src/candidate/candidate.css
@@ -1,13 +1,9 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
 .candidate {
   display: flex;
   flex-direction: column;
-  width: 100%
+  justify-content: left;
 }
+
 .dna-sequence{
   color: grey;
   font-size: 0.5em;
