Add target sequence to app bar

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,6 +4,7 @@
       [isComputationRunning]="isRunning()"
       (onStart)="startIteration()"
       (onStop)="stopIteration()"
+      (onTargetSequenceChanged)="targetAaSequence.set($event)"
     />
     <app-population-display [populationSequences]="currentPopulation()"/>
   </div>
