Calculate candidates' fitness

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,7 @@
       (onStop)="stopIteration()"
       (onTargetSequenceChanged)="targetAaSequence.set($event)"
     />
-    <app-population-display [populationSequences]="currentPopulation()"/>
+    <app-population-display [populationSequences]="currentPopulationSequences()"/>
   </div>
 </main>
 
